--- a/quickbooks-project/server/package.json
+++ b/quickbooks-project/server/package.json
@@ -11,21 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect-mongo": "^4.4.1",
-    "cors": "^2.8.5",
-    "csrf": "^3.1.0",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "express-mysql-session": "^2.1.5",
-    "express-session": "^1.17.1",
     "intuit-oauth": "^3.0.2",
-    "mongoose": "^5.12.7",
-    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "node-cron": "^3.0.0",
-    "node-quickbooks": "^2.0.38",
-    "request": "^2.88.0"
+    "node-quickbooks": "^2.0.38"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
