Done frontend setup

--- a/quickbooks-project/symfony-api/.env
+++ b/quickbooks-project/symfony-api/.env
@@ -36,3 +36,10 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=a89580ddfc359eaa8bb7d4251a80fea8
 ###< lexik/jwt-authentication-bundle ###
+
+authorizationRequestUrl="https://appcenter.intuit.com/connect/oauth2"
+tokenEndPointUrl='https://oauth.platform.intuit.com/oauth2/v1/tokens/bearer'
+client_id='ABPNRywkPdkqXkXzlXiRLzev0XfVs5gKp5byh8YEyJlHdfnRjV'
+client_secret='EUUTvntmqDrBf2HH3YXXxVcanCbN2ux0y6GbZsVu'
+oauth_scope='com.intuit.quickbooks.accounting'
+oauth_redirect_uri='http://localhost:8000/api/qb/callback'
